[package]
name = "btree-slab"
version = "0.6.1"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["data-structures"]
keywords = ["btree", "map", "set", "slab"]
description = "A memory compact Slab-based B-tree implementation"
repository = "https://github.com/timothee-haudebourg/btree-slab"
documentation = "https://docs.rs/btree-slab"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = ["std-slab", "serde"]
dot = []
std-slab = ["slab", "cc-traits/slab"]
serde = ["dep:serde", "smallvec/serde", "serde/derive", "slab/serde"]

[dependencies]
smallvec = "1.8.0"
cc-traits = "2.0"
slab = { version = "0.4.9", optional = true }
serde = { version = "1.0.216", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
